--- a/src/PIMTool/PIMTool.csproj
+++ b/src/PIMTool/PIMTool.csproj
@@ -31,4 +31,11 @@
     <ProjectReference Include="..\PIMTool.Core\PIMTool.Core.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
