--- a/src/PIMTool/appsettings.json
+++ b/src/PIMTool/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Data Source=.;Initial Catalog=PimTool;Integrated Security=True"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-HMTKEN;Database=PIMTool;Uid=sa;Pwd=12345;Trusted_Connection=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
