--- a/src/PIMTool/PIMTool.csproj
+++ b/src/PIMTool/PIMTool.csproj
@@ -1,8 +1,9 @@
+﻿
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
@@ -26,7 +27,7 @@
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.2" />
   </ItemGroup>
 
-
+	
   <ItemGroup>
     <ProjectReference Include="..\PIMTool.Core\PIMTool.Core.csproj" />
   </ItemGroup>
