Le Tri Quyen BE + FE

--- a/src/PIMTool/appsettings.json
+++ b/src/PIMTool/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Data Source=.;Initial Catalog=PimTool;Integrated Security=True"
-    },
+  "ConnectionStrings": {
+    "PimTool": "Server=(local);Database=PimTool;Trusted_Connection=true; TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
