--- a/Client/package.json
+++ b/Client/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "^17.0.4",
     "@angular/router": "^17.0.4",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@ngrx/store": "^17.0.1",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
+    "ngx-spinner": "^16.0.2",
     "primeicons": "^6.0.1",
     "primeng": "^17.0.0-beta.1",
     "rxjs": "~7.8.0",
